examples/test/testpolicy1576.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1576
  namespace: namespace440
spec:
  podSelector:
    matchLabels:
      key31: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value49
      podSelector:
        matchLabels:
          key4: value29
          key21: value30
          key34: value40
